Добавила оглавление в справку.

--- a/server/src/main/resources/static/info/infoAdmin.html
+++ b/server/src/main/resources/static/info/infoAdmin.html
@@ -5,8 +5,25 @@
     <title>Title</title>
 
     <section>
+        <p><a name="top"></a></p>
         <p style="font-size: 18px; font-weight: bold">Автоматизированная система составления и разгадывания классического кроссворда по выбранной теме.</p>
         <hr>
+        <p style="font-size: 18px; font-weight: bold" >Оглавление</p>
+        <p><a href="#1">Функции администратора.</a></p>
+        <p><a href="#2">Технические требования к системе.</a></p>
+        <p><a href="#3">Руководство для пользователя:</a></p>
+        <p><a href="#4">-	Навигационная панель.</a></p>
+        <p><a href="#5">-	Главная страница.</a></p>
+        <p><a href="#6">-	Страница работы с кроссвордами.</a></p>
+        <p><a href="#7">-	Страница настройки параметров.</a></p>
+        <p><a href="#8">-	Страница ручного составления кроссворда.</a></p>
+        <p><a href="#9">-	Страница автоматической генерации кроссворда.</a></p>
+        <p><a href="#10">-	Страница работы со словарями понятий.</a></p>
+        <p><a href="#11">-	Страница загрузки словаря понятий.</a></p>
+        <p><a href="#12">-	Страница создания словаря понятий.</a></p>
+        <p><a href="#13">-	Страница изменения словаря понятий.</a></p>
+        <hr>
+        <p><a name="1"></a></p>
         <p style="font-size: 18px; font-weight: bold">Функции администратора:</p>
         <ul>
             <li>настройка параметров кроссворда при создании:</li>
@@ -33,7 +50,9 @@
                 <li>создание нового словаря понятий;</li>
             </ol>
         </ul>
+        <p><a href="#top">К оглавлению</a></p>
         <hr>
+        <p><a name="2"></a></p>
         <p style="font-size: 18px; font-weight: bold">Технические требования к системе:</p>
         <ol>
             <li>режим работы   диалоговый;</li>
@@ -45,46 +64,67 @@
             <li>температура окружающего воздуха – 15-35°С;</li>
             <li>влажность воздуха – 45-75%.</li>
         </ol>
+        <p><a href="#top">К оглавлению</a></p>
         <hr>
+        <p><a name="3"></a></p>
         <p style="font-size: 18px; font-weight: bold">Руководство для пользователя:</p>
+        <p><a name="4"></a></p>
         <p style="font-size: 16px; font-weight: bold">Навигационная панель.</p>
         <p>На навигационной панели есть кнопки для перехода на страницу работы с кроссвордами, страницу работы со словарями понятий, страницу справки (сведения о разработчиках и о системе) и выход со страницы администратора.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="5"></a></p>
         <p style="font-size: 16px; font-weight: bold">Главная страница.</p>
         <p>На главной странице есть кнопки перехода на страницу работы с кроссвордами и на страницу работы со словарями понятий.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="6"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница работы с кроссвордами.</p>
         <p>Чтобы создать новый кроссворд, нужно нажать на кнопку «Создать новый кроссворд».</p>
         <p>Ниже кнопки создания представлены уже созданные кроссворды. Чтобы изменить уже созданный кроссворд, нужно щелкнуть ЛКМ по нему.</p>
-        <p>Также вы можете загрузить кроссворд из файла и изменить его, для этого нужно нажать на кнопку «Из файла» и выбрать нужный файл. Загрузить можно только файл с расширением .kros.</p>
+        <p>Также можно загрузить кроссворд из файла и изменить его, для этого нужно нажать на кнопку «Из файла» и выбрать нужный файл. Загрузить можно только файл с расширением .kros.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="7"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница настройки параметров.</p>
-        <p>Если вы нажали кнопку «Создать новый кроссворд», то перейдете на данную страницу.</p>
+        <p>После нажатия кнопки «Создать новый кроссворд» происходит переход на данную страницу.</p>
         <p>Чтобы выбрать размеры (ширину и высоту) сетки, нужно воспользоваться стрелками вверх и вниз для увеличения и уменьшения значения соответственно.</p>
         <p>Чтобы выбрать словарь понятий, слова из которого будут использованы при создании кроссворда, нужно нажать на стрелку рядом с названием словаря и в выпавшем списке выбрать нужный словарь, щелкнув ЛКМ по нему.</p>
-        <p>Чтобы выбрать вид составления кроссворда, нужно нажать на стрелку рядом с видом и в выпавшем списке выбрать нужный вид, щелкнув ЛКМ по нему. При автоматическом виде составления система сама создаст кроссворд из слов выбранного словаря понятий. При ручном виде составления, вам будет необходимо самостоятельно составить кроссворд.</p>
+        <p>Чтобы выбрать вид составления кроссворда, нужно нажать на стрелку рядом с видом и в выпавшем списке выбрать нужный вид, щелкнув ЛКМ по нему. При автоматическом виде составления система сама создаст кроссворд из слов выбранного словаря понятий. При ручном виде составления, необходимо самостоятельно составить кроссворд вручную.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="8"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница ручного составления кроссворда.</p>
         <p>На данной странице присутствует сетка для составления кроссворда, справа указано название выбранного словаря, панель для отображения понятий из словаря, кнопки сортировки слов из словаря по алфавиту или по длине слов. Снизу расположено поле для ввода названия кроссворда. Также снизу расположены кнопки сохранения, скачивания и завершения.</p>
         <p>Для того чтобы добавить слово на сетку, нужно выбрать область на сетке, после чего в панели понятий должны отобразиться подходящие слова для выбранной области,  далее нужно выбрать слово из списка, щелкнув ЛКМ по нему.</p>
         <p>Для того чтобы удалить слово с сетки кроссворда, нужно щелкнуть по нему ЛКМ на сетке, после чего нажать на кнопку Delete.</p>
         <p>Чтобы сохранить кроссворд на данном этапе составления, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но после этого кроссворд в текущем состоянии будет отображаться в списке созданных кроссвордов на странице работы с кроссвордами и в каталоге пользователя для разгадывания.</p>
-        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, вам нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="9"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница автоматической генерации кроссворда.</p>
         <p>На данной странице присутствует сетка со сгенерированным кроссвордом, справа указано название выбранного словаря, панель для отображения понятий из словаря. Снизу расположено поле для ввода названия кроссворда. Также снизу расположены кнопки сохранения, скачивания и завершения.</p>
         <p>Чтобы сохранить кроссворд, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но после этого кроссворд будет отображаться в списке созданных кроссвордов на странице работы с кроссвордами и в каталоге пользователя для разгадывания.</p>
-        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, вам нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="10"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница работы со словарями понятий.</p>
         <p>Это страница приветствия. Кроме того на этой странице и на всех страницах работы со словарями понятий присутствуют кнопки для перехода на страницы создания, загрузки и изменения словарей понятий.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="11"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница загрузки словаря понятий.</p>
         <p>Чтобы загрузить словарь из файла, нужно нажать кнопку выбора словаря и в открывшемся окне выбрать нужный файл. Загрузить можно только файл с расширением .dict. Далее нужно ввести название словаря, которое будет отображаться в системе, и нажать на кнопку «Загрузить».</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="12"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница создания словаря понятий.</p>
         <p>Чтобы создать словарь понятий, нужно сначала ввести названия в соответствующее поле. Затем добавить понятие с определением, нажав кнопку «Добавить». В соответствующих полях нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы. После добавления в таблице появится понятие и его определение.</p>
         <p>Чтобы удалить понятие и определение, нужно нажать на кнопку-крестик в строке данного понятия.</p>
         <p>После завершения работы над словарем, необходимо нажать кнопку «Сохранить»,  после чего словарь будет создан и будет отображаться в списках словарей.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="13"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница изменения словаря понятий.</p>
         <p>На данной странице можно изменить уже созданные словари. Чтобы выбрать словарь для изменения, нужно нажать на стрелку рядом с названием словаря и в выпавшем списке выбрать нужный словарь, щелкнув ЛКМ по нему.</p>
         <p>Чтобы добавить понятие с определением, нужно нажать кнопку «Добавить». В открывшемся окне нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы. После добавления в таблице появится понятие и его определение.</p>
         <p>Чтобы удалить понятие и определение, нужно нажать на кнопку-крестик в строке данного понятия.</p>
         <p>После завершения работы над словарем, необходимо нажать кнопку «Сохранить»,  после чего словарь будет создан и будет отображаться в списках словарей.</p>
-        <p>Чтобы скачать словарь на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, вам нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
-
+        <p>Чтобы скачать словарь на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p><a href="#top">К оглавлению</a></p>
     </section>
 
 </head>
