--- a/server/src/main/resources/static/info/infoUser.html
+++ b/server/src/main/resources/static/info/infoUser.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <section>
+        <p><a name="top"></a></p>
         <p style="font-size: 18px; font-weight: bold">Автоматизированная система составления и разгадывания классического кроссворда по выбранной теме.</p>
         <hr>
+        <p style="font-size: 18px; font-weight: bold" >Оглавление</p>
+        <p><a href="#1">Функции администратора.</a></p>
+        <p><a href="#2">Технические требования к системе.</a></p>
+        <p><a href="#3">Руководство для пользователя:</a></p>
+        <p><a href="#4">-	Навигационная панель.</a></p>
+        <p><a href="#5">-	Главная страница (каталог)</a></p>
+        <p><a href="#6">-	Страница разгадывания.</a></p>
+        <p><a href="#7">-	Страница результатов.</a></p>
+        <p><a href="#8">-	Вход.</a></p>
+        <hr>
+        <p><a name="1"></a></p>
         <p style="font-size: 18px; font-weight: bold">Функции игрока:</p>
         <ul>
             <li>разгадывание кроссворда: вписывание и удаление букв;</li>
             <li>сохранение кроссворда в файл;</li>
             <li>загрузка кроссворда из файла.</li>
         </ul>
+        <p><a href="#top">К оглавлению</a></p>
         <hr>
+        <p><a name="2"></a></p>
         <p style="font-size: 18px; font-weight: bold">Технические требования к системе:</p>
         <ol>
             <li>режим работы   диалоговый;</li>
@@ -24,14 +38,21 @@
             <li>температура окружающего воздуха – 15-35°С;</li>
             <li>влажность воздуха – 45-75%.</li>
         </ol>
+        <p><a href="#top">К оглавлению</a></p>
         <hr>
+        <p><a name="3"></a></p>
         <p style="font-size: 18px; font-weight: bold">Руководство для пользователя:</p>
+        <p><a name="4"></a></p>
         <p style="font-size: 16px; font-weight: bold">Навигационная панель.</p>
         <p>На навигационной панели есть кнопки для перехода на страницу каталога, справки (сведения о разработчиках и о системе) и вход только для администратора.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="5"></a></p>
         <p style="font-size: 16px; font-weight: bold">Главная страница (каталог).</p>
         <p>При открытии сайта вы попадаете на главную страницу с выбором кроссворда для разгадывания.</p>
         <p>Вы можете выбрать один из предложенных кроссвордов, щелкнув по нему левой кнопкой мыши (ЛКМ), будет выполнен переход на страницу разгадывания кроссворда.</p>
         <p>Также если на вашем устройстве уже есть сохраненный кроссворд, вы можете загрузить его, щелкнув ЛКМ по кнопке «Из файла». Загрузить можно только файл с расширением .kros.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="6"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница разгадывания.</p>
         <p>На данной странице присутствует сетка с кроссвордом, справа указано название кроссворда и находится панель для отображения определения выбранного слова. Снизу расположены кнопки сохранения, скачивания и завершения.</p>
         <p>Для того чтобы увидеть определение, нужно щелкнуть ЛКМ по клетке сетки. Будет выделена область на сетке и на панели определения будет показано определение.</p>
@@ -39,11 +60,15 @@
         <p>Чтобы сохранить кроссворд на данном этапе разгадывания, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но в будущем вы можете вернуться на данную страницу и продолжить разгадывания.</p>
         <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, вам нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
         <p>Чтобы завершить разгадывание и перейти на страницу с результатами, нужно нажать кнопку «Завершить».</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="7"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница результатов.</p>
         <p>На данной странице отображаются ваши результаты разгадывания, и отображается сетка кроссворда с верными ответами.</p>
+        <p><a href="#top">К оглавлению</a></p>
+        <p><a name="8"></a></p>
         <p style="font-size: 16px; font-weight: bold">Вход.</p>
         <p>Если Вы являетесь администратором данного сайта, чтобы перейти на страницу администрирования, нужно нажать кнопку «Вход». Далее вам нужно ввести логин и пароль и нажать кнопку подтверждения.</p>
-
+        <p><a href="#top">К оглавлению</a></p>
     </section>
 </head>
 <body>
