Картинки для справки

--- a/server/src/main/resources/static/info/infoUser.html
+++ b/server/src/main/resources/static/info/infoUser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Info</title>
     <section>
         <p><a name="top"></a></p>
         <p style="font-size: 18px; font-weight: bold">Автоматизированная система составления и разгадывания классического кроссворда по выбранной теме.</p>
@@ -45,29 +45,40 @@
         <p><a name="4"></a></p>
         <p style="font-size: 16px; font-weight: bold">Навигационная панель.</p>
         <p>На навигационной панели есть кнопки для перехода на страницу каталога, справки (сведения о разработчиках и о системе) и вход только для администратора.</p>
+        <img src="https://sun9-68.userapi.com/impg/ICQBi1G7iq79iY1Ck67j8wvkSAfEEGMzeOzrUg/BrHqRMRotGc.jpg?size=740x104&quality=96&sign=fa39a00f945480ada6f4323940afcf03&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="5"></a></p>
         <p style="font-size: 16px; font-weight: bold">Главная страница (каталог).</p>
-        <p>При открытии сайта вы попадаете на главную страницу с выбором кроссворда для разгадывания.</p>
-        <p>Вы можете выбрать один из предложенных кроссвордов, щелкнув по нему левой кнопкой мыши (ЛКМ), будет выполнен переход на страницу разгадывания кроссворда.</p>
-        <p>Также если на вашем устройстве уже есть сохраненный кроссворд, вы можете загрузить его, щелкнув ЛКМ по кнопке «Из файла». Загрузить можно только файл с расширением .kros.</p>
+        <p>Это главная страница с выбором кроссворда для разгадывания.</p>
+        <img src="https://sun9-78.userapi.com/impg/BYFSGfH-N9oCbwO3Lw8KUSCXFkDQVm0GdavA2g/A9HLwy9GwDs.jpg?size=594x304&quality=96&sign=b9693359ec37c1618830663575f8230a&type=album" alt="image">
+        <p>Можно выбрать один из предложенных кроссвордов, щелкнув по нему левой кнопкой мыши (ЛКМ), будет выполнен переход на страницу разгадывания кроссворда.</p>
+        <p>Также если на устройстве уже есть сохраненный кроссворд, можно загрузить его, щелкнув ЛКМ по кнопке «Из файла».</p>
+        <img src="https://sun9-81.userapi.com/impg/y8a7FOJXaFEmemirtNVwh7u0ExnqdGoNdIfppA/GYtHXMkQ6oM.jpg?size=569x259&quality=96&sign=8104a664eb83196a85024f76850a5c4a&type=album" alt="image">
+        <p>Нужно нажать "Select file" и откроется окно для открытия файла с устройства. Нужно выбрать файл и нажать кнопку "Открыть". Загрузить можно только файл с расширением .kros.</p>
+        <img src="https://sun9-24.userapi.com/impg/Kql9Tz7lfjMBzhfXD12089Nxzy-7rGJnZKR6wA/5EXLfUPNu3E.jpg?size=613x343&quality=96&sign=9df95feb09be01a9119398fda788e80a&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="6"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница разгадывания.</p>
         <p>На данной странице присутствует сетка с кроссвордом, справа указано название кроссворда и находится панель для отображения определения выбранного слова. Снизу расположены кнопки сохранения, скачивания и завершения.</p>
+        <img src="https://sun9-19.userapi.com/impg/gp_WFbn5rQ0-AIRkdTqBLo7HLWdtzMryX5KRtA/EgNj8ouAyvk.jpg?size=902x536&quality=96&sign=60e9d4a561ae3a4d2260bdeaa181c213&type=album" alt="image">
         <p>Для того чтобы увидеть определение, нужно щелкнуть ЛКМ по клетке сетки. Будет выделена область на сетке и на панели определения будет показано определение.</p>
+        <img src="https://sun9-79.userapi.com/impg/udvIIy7rkNqivKZyq4dzYQrOKmxqM6cJG1eIUQ/oyug6rYYBuY.jpg?size=1167x709&quality=96&sign=7a62337793ba65b4af35b25ac4092ce8&type=album" alt="image">
         <p>Чтобы вписать букву на сетку, нужно щелкнуть ЛКМ по нужной клетке и вписать букву с клавиатуры. Чтобы удалить букву, нужно щелкнуть ЛКМ по нужной клетке и нажать клавишу Backspace на клавиатуре.</p>
-        <p>Чтобы сохранить кроссворд на данном этапе разгадывания, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но в будущем вы можете вернуться на данную страницу и продолжить разгадывания.</p>
-        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, вам нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <img src="https://sun9-88.userapi.com/impg/WCCUPj8twsLLWj3xZAAHh6LMXryCK2EeCBrLVg/ZKZmDAWl7Vs.jpg?size=1166x705&quality=96&sign=ef9d07e829702117806ecb83683bf933&type=album" alt="image">
+        <p>Чтобы сохранить кроссворд на данном этапе разгадывания, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но в будущем можно вернуться на данную страницу и продолжить разгадывания, нажав кнопку "Продолжить разгадывание".</p>
+        <img src="https://sun9-20.userapi.com/impg/POcRkRSfmhd5VWEGKoPP6eAkdZgAMqY2AHJ50A/jCp4hxX5ccs.jpg?size=1196x682&quality=96&sign=2765d23b7ed12c66fca4061cd6479936&type=album" alt="image">
+        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Файл будет загружен с расширением .kros.</p>
         <p>Чтобы завершить разгадывание и перейти на страницу с результатами, нужно нажать кнопку «Завершить».</p>
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="7"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница результатов.</p>
         <p>На данной странице отображаются ваши результаты разгадывания, и отображается сетка кроссворда с верными ответами.</p>
+        <img src="https://sun9-32.userapi.com/impg/G3eQGMbElQuE9XB6SaKuZfN3ywtcJVYsH1l8mg/1Od4paAIpr0.jpg?size=1195x709&quality=96&sign=4e14061e47f5cd97cbfd4f3b2127e3ab&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="8"></a></p>
         <p style="font-size: 16px; font-weight: bold">Вход.</p>
-        <p>Если Вы являетесь администратором данного сайта, чтобы перейти на страницу администрирования, нужно нажать кнопку «Вход». Далее вам нужно ввести логин и пароль и нажать кнопку подтверждения.</p>
+        <p>Если Вы являетесь администратором данного сайта, чтобы перейти на страницу администрирования, нужно нажать кнопку «Вход». Далее нужно ввести логин и пароль и нажать кнопку подтверждения "Войти".</p>
+        <img src="https://sun9-68.userapi.com/impg/c7p88p-Zva-KOkOaySWNhNZENqDaelRHqkGHKw/b5kcFBcy1t4.jpg?size=301x150&quality=96&sign=e56f4670e3e5df1b2444d409bfe2e581&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
     </section>
 </head>
