--- a/server/src/main/resources/static/info/infoAdmin.html
+++ b/server/src/main/resources/static/info/infoAdmin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Info</title>
 
     <section>
         <p><a name="top"></a></p>
@@ -71,56 +71,81 @@
         <p><a name="4"></a></p>
         <p style="font-size: 16px; font-weight: bold">Навигационная панель.</p>
         <p>На навигационной панели есть кнопки для перехода на страницу работы с кроссвордами, страницу работы со словарями понятий, страницу справки (сведения о разработчиках и о системе) и выход со страницы администратора.</p>
+        <img src="https://sun9-57.userapi.com/impg/9RyQZruR7VOUqp2ZeaqnplLqtdRpqg_mXiUMTQ/fp6hTGLZeYM.jpg?size=1196x167&quality=96&sign=54569241e1bd979df3d2f9e97efd43f9&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="5"></a></p>
         <p style="font-size: 16px; font-weight: bold">Главная страница.</p>
         <p>На главной странице есть кнопки перехода на страницу работы с кроссвордами и на страницу работы со словарями понятий.</p>
+        <img src="https://sun9-41.userapi.com/impg/hIwVySpfmQYY4zA-VtBpIEFie5CBQfptw1aqjQ/A4YuGJet2pU.jpg?size=457x169&quality=96&sign=ded39c1c8e63a1f1c9dd1700a8273b03&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="6"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница работы с кроссвордами.</p>
         <p>Чтобы создать новый кроссворд, нужно нажать на кнопку «Создать новый кроссворд».</p>
+        <img src="https://sun9-71.userapi.com/impg/OYzSXAVDUgWeCiPSiOT62NkARvRHo3LyIRJ2ow/eXop0XQU1fc.jpg?size=594x339&quality=96&sign=30b56ea2e35c73796c77b18c0e535450&type=album" alt="image">
         <p>Ниже кнопки создания представлены уже созданные кроссворды. Чтобы изменить уже созданный кроссворд, нужно щелкнуть ЛКМ по нему.</p>
         <p>Также можно загрузить кроссворд из файла и изменить его, для этого нужно нажать на кнопку «Из файла» и выбрать нужный файл. Загрузить можно только файл с расширением .kros.</p>
+        <img src="https://sun9-73.userapi.com/impg/D9q7sqBa6vVR6qasomFzkHy1cUSXzim5tG8lUg/WX6_-beO1Ow.jpg?size=567x265&quality=96&sign=541bf1210bfdd04fb5a16ac2e3cff24c&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="7"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница настройки параметров.</p>
         <p>После нажатия кнопки «Создать новый кроссворд» происходит переход на данную страницу.</p>
+        <img src="https://sun9-21.userapi.com/impg/81fzHMZKisyUs367tBwxWINcGM3Aotbryy2OqA/-z_IAeJNpjY.jpg?size=509x498&quality=96&sign=bab9ab39bf547a31595cfa6c7d97c40a&type=album" alt="image">
         <p>Чтобы выбрать размеры (ширину и высоту) сетки, нужно воспользоваться стрелками вверх и вниз для увеличения и уменьшения значения соответственно.</p>
         <p>Чтобы выбрать словарь понятий, слова из которого будут использованы при создании кроссворда, нужно нажать на стрелку рядом с названием словаря и в выпавшем списке выбрать нужный словарь, щелкнув ЛКМ по нему.</p>
         <p>Чтобы выбрать вид составления кроссворда, нужно нажать на стрелку рядом с видом и в выпавшем списке выбрать нужный вид, щелкнув ЛКМ по нему. При автоматическом виде составления система сама создаст кроссворд из слов выбранного словаря понятий. При ручном виде составления, необходимо самостоятельно составить кроссворд вручную.</p>
+        <p>Для перехода на страницу создания кроссворда, нужно нажать кнопку "Начать".</p>
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="8"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница ручного составления кроссворда.</p>
         <p>На данной странице присутствует сетка для составления кроссворда, справа указано название выбранного словаря, панель для отображения понятий из словаря, кнопки сортировки слов из словаря по алфавиту или по длине слов. Снизу расположено поле для ввода названия кроссворда. Также снизу расположены кнопки сохранения, скачивания и завершения.</p>
+        <img src="https://sun9-20.userapi.com/impg/wmxHpWih-zxvdsHIxCgJ3z6tkUreEGoGQLVVmw/oHxhw-BTTFM.jpg?size=1163x853&quality=96&sign=1d8afa244195ce90e8ecb244a30cf835&type=album" alt="image">
         <p>Для того чтобы добавить слово на сетку, нужно выбрать область на сетке, после чего в панели понятий должны отобразиться подходящие слова для выбранной области,  далее нужно выбрать слово из списка, щелкнув ЛКМ по нему.</p>
-        <p>Для того чтобы удалить слово с сетки кроссворда, нужно щелкнуть по нему ЛКМ на сетке, после чего нажать на кнопку Delete.</p>
+        <img src="https://sun9-17.userapi.com/impg/7ZYXEpTHbd4y6B17uTfXzCTZlfPzWqMnlRMDpA/_QrZ7xY0S-A.jpg?size=1206x705&quality=96&sign=eb6c847a32d6cda56d75b17133444898&type=album" alt="image">
+        <p>Слово появится на сетке. Можно продолжать составление аналогичным образом.</p>
+        <img src="https://sun9-76.userapi.com/impg/QrlQ590KKu7ekw8tCF50Q44eGrt0Ds9M1fvZ7A/8cbFJjYFKpQ.jpg?size=1200x736&quality=96&sign=ac88fc497ef65eee4f88767ddd96092c&type=album" alt="image">
+        <p>Для того чтобы удалить слово с сетки кроссворда, нужно щелкнуть по нему ЛКМ на сетке, после чего нажать на кнопку "Удалить", которая появится на поле справа.</p>
+        <img src="https://sun9-73.userapi.com/impg/QaXb0HLz3LhDQAx6UTqIzBa-TyWwEqrRGL73nA/9CT7ecnrdss.jpg?size=1186x608&quality=96&sign=098f15d29b2a5fd433d858a5e7d9e8a1&type=album" alt="image">
         <p>Чтобы сохранить кроссворд на данном этапе составления, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но после этого кроссворд в текущем состоянии будет отображаться в списке созданных кроссвордов на странице работы с кроссвордами и в каталоге пользователя для разгадывания.</p>
-        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
+        <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Файл будет загружен на устройство с расширением .kros.</p>
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="9"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница автоматической генерации кроссворда.</p>
         <p>На данной странице присутствует сетка со сгенерированным кроссвордом, справа указано название выбранного словаря, панель для отображения понятий из словаря. Снизу расположено поле для ввода названия кроссворда. Также снизу расположены кнопки сохранения, скачивания и завершения.</p>
-        <p>Чтобы сохранить кроссворд, нужно нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но после этого кроссворд будет отображаться в списке созданных кроссвордов на странице работы с кроссвордами и в каталоге пользователя для разгадывания.</p>
+        <img src="https://sun9-84.userapi.com/impg/Y89X5xFMFQo5PhmQgjY59hfzxJIsjyxD8pZaBg/kxnITd2FVzM.jpg?size=1182x717&quality=96&sign=8335a734dec9c00060251be34d474251&type=album" alt="image">
+        <p>Чтобы сохранить кроссворд, нужно ввести название и нажать кнопку «Сохранить». При этом кроссворд не будет сохранен на устройство. Но после этого кроссворд будет отображаться в списке созданных кроссвордов на странице работы с кроссвордами и в каталоге пользователя для разгадывания.</p>
         <p>Чтобы скачать кроссворд на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="10"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница работы со словарями понятий.</p>
         <p>Это страница приветствия. Кроме того на этой странице и на всех страницах работы со словарями понятий присутствуют кнопки для перехода на страницы создания, загрузки и изменения словарей понятий.</p>
+        <img src="https://sun9-4.userapi.com/impg/ULAcCTsO9dHqwDw31JU5JdMXNT6QDShb72bq8A/hvf3vyiygQc.jpg?size=731x129&quality=96&sign=67fb510ba31e038389795af2eeae53c0&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="11"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница загрузки словаря понятий.</p>
         <p>Чтобы загрузить словарь из файла, нужно нажать кнопку выбора словаря и в открывшемся окне выбрать нужный файл. Загрузить можно только файл с расширением .dict. Далее нужно ввести название словаря, которое будет отображаться в системе, и нажать на кнопку «Загрузить».</p>
+        <img src="https://sun9-64.userapi.com/impg/Ld5FL-nWZ1qqQ_wA1gRbExaSaSY1h7vaoZ84BA/GMAl5cUw7fA.jpg?size=366x86&quality=96&sign=e226ab65a46b6daeaa68746078aff695&type=album" alt="image">
+        <p>Нужно нажать "Select file" и откроется окно для открытия файла с устройства. Нужно выбрать файл и нажать кнопку "Открыть". Загрузить можно только файл с расширением .dict.</p>
+        <img src="https://sun9-25.userapi.com/impg/Ow9nKUpUyAkr2Y2HpCEHhTB6txrMLm9U-HiE1w/3FWpionMu_M.jpg?size=610x343&quality=96&sign=a325a83008bf1173e622d8af2a121b04&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="12"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница создания словаря понятий.</p>
-        <p>Чтобы создать словарь понятий, нужно сначала ввести названия в соответствующее поле. Затем добавить понятие с определением, нажав кнопку «Добавить». В соответствующих полях нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы. После добавления в таблице появится понятие и его определение.</p>
+        <img src="https://sun9-21.userapi.com/impg/xNPk9gUpvgvJltP7-O5ktv5J3fuHlMS46i3_NA/427dXYU5ktw.jpg?size=470x205&quality=96&sign=b2f0eeec6de06473991c2e26f4eafebb&type=album" alt="image">
+        <p>Чтобы создать словарь понятий, нужно сначала ввести названия в соответствующее поле. Затем добавить понятие с определением, нажав кнопку «Добавить». В соответствующих полях нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы.</p>
+        <img src="https://sun9-17.userapi.com/impg/joXeC_bWDe77fdU7M_F0ZTg5wF7rsbXfrQvFww/RZ4bKHGjHFE.jpg?size=566x407&quality=96&sign=be2026d7dbce903f562900d87cab628a&type=album" alt="image">
+        <p>После добавления в таблице появится понятие и его определение.</p>
+        <img src="https://sun9-73.userapi.com/impg/_AgfJXT_TwMnWwkhBTh6As7_S-QVdLTjJtGuUg/01-C5-dgBSo.jpg?size=716x253&quality=96&sign=e4866324735a2a47287c0b7e4281c1df&type=album" alt="image">
         <p>Чтобы удалить понятие и определение, нужно нажать на кнопку-крестик в строке данного понятия.</p>
         <p>После завершения работы над словарем, необходимо нажать кнопку «Сохранить»,  после чего словарь будет создан и будет отображаться в списках словарей.</p>
+        <img src="https://sun9-58.userapi.com/impg/yeppVfnhjazz5emPxa3BqJuffxfdgnGV7bnPIw/sBvbZhraKjQ.jpg?size=1193x619&quality=96&sign=dc7e97008b91c15fde9023b95066e57d&type=album" alt="image">
         <p><a href="#top">К оглавлению</a></p>
         <p><a name="13"></a></p>
         <p style="font-size: 16px; font-weight: bold">Страница изменения словаря понятий.</p>
         <p>На данной странице можно изменить уже созданные словари. Чтобы выбрать словарь для изменения, нужно нажать на стрелку рядом с названием словаря и в выпавшем списке выбрать нужный словарь, щелкнув ЛКМ по нему.</p>
-        <p>Чтобы добавить понятие с определением, нужно нажать кнопку «Добавить». В открывшемся окне нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы. После добавления в таблице появится понятие и его определение.</p>
+        <img src="https://sun9-44.userapi.com/impg/FimFngTTwgHrXT6-wE7Z7bd_BEOoC8Yv8ZTqDg/2owRRFrslKs.jpg?size=364x157&quality=96&sign=6e955d775b4ff9b5a6edaa029588236b&type=album" alt="image">
+        <p>Чтобы добавить понятие с определением, нужно нажать кнопку «Добавить». В открывшемся окне нужно ввести слово и определение и нажать кнопку подтверждения. Слова не должны повторяться. Вводить можно только буквы.</p>
+        <img src="https://sun9-17.userapi.com/impg/joXeC_bWDe77fdU7M_F0ZTg5wF7rsbXfrQvFww/RZ4bKHGjHFE.jpg?size=566x407&quality=96&sign=be2026d7dbce903f562900d87cab628a&type=album" alt="image">
+        <p>После добавления в таблице появится понятие и его определение.</p>
+        <img src="https://sun9-79.userapi.com/impg/YjBtilutFkxulIM5CqU_Uym6CMT7yIqC6Ge9UQ/MMJD1N2LySM.jpg?size=1184x562&quality=96&sign=fca31efc37fa3007d627bbe4ccc91b5b&type=album" alt="image">
         <p>Чтобы удалить понятие и определение, нужно нажать на кнопку-крестик в строке данного понятия.</p>
         <p>После завершения работы над словарем, необходимо нажать кнопку «Сохранить»,  после чего словарь будет создан и будет отображаться в списках словарей.</p>
         <p>Чтобы скачать словарь на устройство, необходимо нажать кнопку «Скачать». Далее откроется окно скачивания файла, там нужно выбрать путь сохранение и нажать кнопку «Скачать».</p>
